<resources>
    <string name="app_name">Tugas P4</string>
    <string name="txt_name">Nama : Fuad Rifqi Zamzami</string>
    <string name="txt_prodi">Prodi : Teknik Informatika</string>
    <string name="txt_fakultas">Fakultas Teknologi Informasi</string>
    <string name="txt_universitas">Universitas Mercu Buana Yogyakarta</string>
    <string name="action_settings">Settings</string>
    <string name="my_photo">My Photo</string>
    <string name="my_name_is">Halo, salam mahasiswa!</string>
    <string name="btn_view">View</string>
</resources>
